--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
 cmake_minimum_required(VERSION 3.23)
 
-# uncomment to enable vcpkg:
-# # Setup vcpkg - should be called before defining project()
-# run_vcpkg()
-
-project(blank-slate VERSION 1.0.0)
+project(wmcv-tech VERSION 1.0.0)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED true)
@@ -16,12 +12,26 @@ OPTION(ENABLE_ALL_REASONABLE_WARNINGS "Enable all possible reasonable warnings" 
 OPTION(ENABLE_WARNINGS_AS_ERRORS "Warnings are treated as Errors" ON)
 OPTION(ENABLE_STATIC_ANALYSIS "Enable Static Analysis Tools" ON)
 OPTION(ENABLE_SANITIZERS "Enable Sanitizer Tools" ON)
+OPTION(ENABLE_TRACY_PROFILER "Enable Tracy Profiler" OFF)
 
 set(CMAKE_SCRIPTS_DIR ${CMAKE_CURRENT_LIST_DIR}/scripts/cmake)
+
+if(MSVC)
+    set(WMCV_PLATFORM WMCV_PLATFORM_WINDOWS)
+elseif(APPLE)
+    set(WMCV_PLATFORM WMCV_PLATFORM_APPLE)
+elseif(ANDROID)
+    set(WMCV_PLATFORM WMCV_PLATFORM_ANDROID)
+elseif(UNIX and not APPLE)
+    set(WMCV_PLATFORM WMCV_PLATFORM_LINUX)
+else()
+    set(WMCV_PLATFORM WMCV_PLATFORM_UNKNOWN)
+endif()
 
 include(${CMAKE_SCRIPTS_DIR}/compilerwarnings.cmake)
 include(${CMAKE_SCRIPTS_DIR}/sanitizers.cmake)
 include(${CMAKE_SCRIPTS_DIR}/staticanalysis.cmake)
+include(${CMAKE_SCRIPTS_DIR}/precompiled.cmake)
 
 if (ENABLE_TESTS)
     message("Unit Testing Enabled")
