--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ elseif(APPLE)
     set(WMCV_PLATFORM WMCV_PLATFORM_APPLE)
 elseif(ANDROID)
     set(WMCV_PLATFORM WMCV_PLATFORM_ANDROID)
-elseif(UNIX and not APPLE)
+elseif(UNIX AND NOT APPLE)
     set(WMCV_PLATFORM WMCV_PLATFORM_LINUX)
 else()
     set(WMCV_PLATFORM WMCV_PLATFORM_UNKNOWN)
