--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,9 @@ endif()
 include(${CMAKE_SCRIPTS_DIR}/compilerwarnings.cmake)
 include(${CMAKE_SCRIPTS_DIR}/sanitizers.cmake)
 include(${CMAKE_SCRIPTS_DIR}/staticanalysis.cmake)
-include(${CMAKE_SCRIPTS_DIR}/precompiled.cmake)
 
 if (ENABLE_TESTS)
-    message("Unit Testing Enabled")
+    message("-- Unit Testing Enabled")
     enable_testing()
     add_subdirectory(test)
 endif()
