Missing system allocator
+ Add System allocator (just uses malloc) for Nix platforms
- removed unused pch.cpp files
* update CMakeLists.txt

--- a/src/wmcv_foundation/CMakeLists.txt
+++ b/src/wmcv_foundation/CMakeLists.txt
@@ -21,6 +21,11 @@ if(MSVC)
         src/memory/wmcv_allocator_system_win32.cpp
     )
     list(APPEND MEMORY_SOURCE_FILES ${MEMORY_SOURCE_FILES_WINDOWS})
+elseif(UNIX)
+    set(MEMORY_SOURCE_FILES_NIX
+        src/memory/wmcv_allocator_system_nix.cpp
+    )
+    list(APPEND MEMORY_SOURCE_FILES ${MEMORY_SOURCE_FILES_NIX})
 endif()
 
 source_group("" FILES ${FOUNDATION_SOURCE_FILES})
